Alteração var nome
Alteração dos nomes das variáveis

--- a/variaveis.html
+++ b/variaveis.html
@@ -9,7 +9,7 @@
     <script>
 
         //VARIAVÉIS
-        var nome = "Guilherme";
+        var nome = "Anderson";
         var telefone = "(00) 0000-0000";
         var convenioMedico = true;
         var profissao = "Docente";
@@ -22,7 +22,7 @@
         
         //INCLUINDO NOVO FUNCIONARIO E SALARIO
         salario = 7000
-        nome = "Heloisa"
+        nome = "Kauã"
 
         //IMPRESSÃO
         document.write("Nome do funcionário: " + nome + "<br>");
